force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__AssignmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignmentEndDate__c</fullName>
    <label>Assignment End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignmentEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>