force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__AssignmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignmentStartDate__c</fullName>
    <label>Assignment Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignmentStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>