force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__AvailabilityExceptions__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvailabilityExceptions__c</fullName>
    <label>Availability Exceptions</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvailabilityExceptions</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>