force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailAddress__c</fullName>
    <label>Email Address</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>