force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__Has24x7Service__c.field-meta.xml
<CustomField>
    <fullName>ssot__Has24x7Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has 24x7 Service</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Has24x7Service</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>