force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__HealthcareFacilityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareFacilityId__c</fullName>
    <label>Healthcare Facility</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareFacilityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>