force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__InitialStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__InitialStartDate__c</fullName>
    <label>Initial Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InitialStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>