force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__IsDirectoryPrint__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDirectoryPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Directory Print</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDirectoryPrint</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>