force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__IsPrimaryCarePhysician__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryCarePhysician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Care Physician</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryCarePhysician</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>