force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastReferencedDate__c</fullName>
    <label>Last Referenced Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastReferencedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>