force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__LowestValidAge__c.field-meta.xml
<CustomField>
    <fullName>ssot__LowestValidAge__c</fullName>
    <label>Lowest Valid Age</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LowestValidAge</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>