force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__ServiceTerritoryResourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceTerritoryResourceId__c</fullName>
    <label>Service Territoty Resource</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceTerritoryResourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>