force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__SsaCountyCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__SsaCountyCode__c</fullName>
    <label>Ssa County Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SsaCountyCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>