force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__TerminationDate__c</fullName>
    <label>Termination Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TerminationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>