force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__TerminationRequestedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__TerminationRequestedById__c</fullName>
    <label>Termination Requested By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TerminationRequestedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>